# OptimisationCombinatoire

./: .gitignore
Knapsack/: CMakeLists.txt  Makefile  kpSolver.cpp  kpSolver.hpp  kpSolverBB.cpp  kpSolverBB.hpp  kpSolverDP.cpp  kpSolverDP.hpp  kpSolverDPsparseV2.cpp  kpSolverDPsparseV2.hpp  kpSolverGreedy.cpp  kpSolverGreedy.hpp  kpSolverHeurDP.cpp  kpSolverHeurDP.hpp  matDP.cpp  matDP.hpp  nodeBB.cpp  nodeBB.hpp  nodeManagement.cpp  nodeManagement.hpp  stopBB.hpp  testBB.cpp  testDP.cpp  testHeur.cpp
instances/convert/kplib-master/00Uncorrelated/n00050/R01000/: s000.kp  s002.kp  s003.kp  s004.kp  s010.kp  s011.kp  s012.kp  s013.kp  s014.kp  s016.kp  s017.kp  s018.kp  s019.kp  s020.kp  s021.kp  s022.kp  s024.kp  s025.kp  s026.kp  s027.kp  s028.kp  s030.kp  s032.kp  s033.kp  s034.kp  s035.kp  s037.kp  s038.kp  s039.kp  s040.kp  s041.kp  s043.kp  s044.kp  s045.kp  s046.kp  s047.kp  s051.kp  s053.kp  s055.kp  s056.kp  (+23 more)
instances/convert/kplib-master/00Uncorrelated/n00050/R10000/: s000.kp  s001.kp  s003.kp  s005.kp  s006.kp  s008.kp  s010.kp  s012.kp  s015.kp  s018.kp  s020.kp  s022.kp  s024.kp  s028.kp  s030.kp  s031.kp  s034.kp  s035.kp  s036.kp  s037.kp  s040.kp  s041.kp  s042.kp  s044.kp  s045.kp  s048.kp  s050.kp  s053.kp  s057.kp  s058.kp  s061.kp  s062.kp  s063.kp  s064.kp  s065.kp  s066.kp  s067.kp  s068.kp  s071.kp  s074.kp  (+14 more)
instances/convert/kplib-master/00Uncorrelated/n00100/R01000/: s000.kp  s004.kp  s005.kp  s006.kp  s008.kp  s012.kp  s015.kp  s016.kp  s017.kp  s018.kp  s019.kp  s022.kp  s024.kp  s025.kp  s026.kp  s029.kp  s030.kp  s031.kp  s034.kp  s036.kp  s040.kp  s044.kp  s045.kp  s046.kp  s047.kp  s048.kp  s049.kp  s050.kp  s052.kp  (+21 more)
python/: testAll.py  testBB.py  testBBV1.py  testDP.py  testHeur.py
resultats/: res1.csv
v1/: KnapsackSolvers.cpp  kpSolver.cpp  kpSolverDP.cpp  kpSolverHeurDP.cpp  nodeBB.cpp  testBB.cpp
v1/src/: KnapsackSolvers.cpp  kpSolver.cpp  kpSolver.hpp  kpSolverBB.cpp  kpSolverDP.hpp  kpSolverGreedy.cpp  nodeBB.hpp
(+19833 files in other folders)
